<resources>
    <string name="app_name">TODOorNot</string>
    <string name="et_list_title_hint">Enter List Name Here</string>
    <string name="button_save">Save</string>
    <string name="spinner_list_title_prompt">Select List Title</string>
    <string name="et_list_item_hint">Enter New Item Here</string>
    <string name="et_edit_item">Select an Item to Edit</string>
    <string name="button_update">Update</string>
    <string name="button_delete">Delete</string>
    <string name="button_archive">Archive</string>
</resources>
