<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/et_list_title_hint" />

        <Button
            android:id="@+id/button_save_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/button_save"
            />

    </LinearLayout>



    <Spinner
        android:id="@+id/spinner_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_list_title_prompt"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_list_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:hint="@string/et_list_item_hint" />

        <Button
            android:id="@+id/button_save_list_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/button_save"/>

    </LinearLayout>

    <ListView
        android:id="@+id/list_view_items"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorPrimary"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/et_list_edit_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_edit_item"
        android:layout_margin="15dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_item_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/button_update"
            android:layout_marginLeft="15dp"/>

        <Button
            android:id="@+id/button_item_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_delete"/>

        <Button
            android:id="@+id/button_item_archive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/button_archive"
            android:layout_marginRight="15dp"/>

    </LinearLayout>



</LinearLayout>